--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -26,65 +26,17 @@ runs:
       run: |
         # initialize Conda
         conda update -y -q conda
-        conda create -n faiss_env
-        conda activate faiss_env
         echo "$CONDA/bin" >> $GITHUB_PATH
         conda install -y -q python=3.11 cmake>=3.24.0 make swig numpy scipy pytest
-        conda install -y -q -c conda-forge openblas lapackpp gxx_linux-aarch64 sysroot_linux-aarch64
         conda install -y -q pytorch -c pytorch
-    - name: Configure build environment in Linux x86_64
-      shell: bash
-      if: runner.arch != 'ARM64'
-      run: |
-        # initialize Conda
-        conda config --set solver libmamba
-        conda update -y -q conda
-        echo "$CONDA/bin" >> $GITHUB_PATH
-        # install packages for Linux x86_64
-        # install base packages
-        conda install -y -q python=3.11 cmake make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
-        conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
-
-        # install CUDA packages
-        if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
-          conda install -y -q cuda-toolkit -c "nvidia/label/cuda-11.8.0"
-        fi
-
-        # install RAFT packages
-        if [ "${{ inputs.raft }}" = "ON" ]; then
-          conda install -y -q libraft cuda-version=11.8 cuda-toolkit -c rapidsai-nightly -c "nvidia/label/cuda-11.8.0" -c conda-forge
-        fi
-
-        # install test packages
-        conda install -y pytest
-        if [ "${{ inputs.gpu }}" = "ON" ]; then
-          conda install -y -q pytorch pytorch-cuda=11.8 -c pytorch -c nvidia/label/cuda-11.8.0
-        else
-          conda install -y -q pytorch -c pytorch
-        fi
-    - name: Build all targets on Linux x86_64
-      if: runner.arch != 'ARM64'
-      shell: bash
-      run: |
-        eval "$(conda shell.bash hook)"
-        conda activate
-        cmake -B build \
-              -DBUILD_TESTING=ON \
-              -DBUILD_SHARED_LIBS=ON \
-              -DFAISS_ENABLE_GPU=${{ inputs.gpu }} \
-              -DFAISS_ENABLE_RAFT=${{ inputs.raft }} \
-              -DFAISS_OPT_LEVEL=${{ inputs.opt_level }} \
-              -DFAISS_ENABLE_C_API=ON \
-              -DPYTHON_EXECUTABLE=$CONDA/bin/python \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DBLA_VENDOR=Intel10_64_dyn \
-              -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
-              .
-        make -k -C build -j$(nproc)
+        conda install conda-forge::openblas
+        conda install conda-forge::lapackpp
     - name: Build all targets on Linux aarch64
       if: runner.arch == 'ARM64'
       shell: bash
       run: |
+        eval "$(conda shell.bash hook)"
+        conda activate
         cmake -B build \
               -DBUILD_TESTING=ON \
               -DBUILD_SHARED_LIBS=ON \
