test conda build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,10 +37,21 @@ jobs:
               git --no-pager diff --color
               exit 1
             fi
-  linux-x86_64-cmake:
-    name: Linux x86_64 (cmake)
+  linux-arm64-conda:
+    name: Linux arm64 (conda)
+    needs: linux-x86_64-cmake
     runs-on: faiss-aws-r6g.large
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/build_cmake
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+      - uses: ./.github/actions/build_conda
+  # linux-x86_64-cmake:
+  #   name: Linux x86_64 (cmake)
+  #   runs-on: faiss-aws-r6g.large
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - uses: ./.github/actions/build_cmake
