use sudo on apt-key command

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -70,7 +70,7 @@ runs:
         echo "deb https://repo.radeon.com/amdgpu/${ROCM_VERSION}/ubuntu ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/amdgpu.list
 
         # Add rocm repository
-        wget -qO - http://repo.radeon.com/rocm/rocm.gpg.key | apt-key add -
+        wget -qO - http://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
         local rocm_baseurl="http://repo.radeon.com/rocm/apt/${ROCM_VERSION}"
         # TODO: change to "deb [arch=amd64] ..." on AMD runners
         echo "deb ${rocm_baseurl} ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/rocm.list
