--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -53,8 +53,6 @@ runs:
         else
           conda install -y -q pytorch -c pytorch
         fi
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
     - name: Install ROCm
       if: inputs.rocm == 'ON'
       shell: bash
@@ -69,13 +67,13 @@ runs:
         # Add amdgpu repository
         UBUNTU_VERSION_NAME=`cat /etc/os-release | grep UBUNTU_CODENAME | awk -F= '{print $2}'`
         # TODO: change to "deb [arch=amd64] ..." on AMD runners
-        echo "deb https://repo.radeon.com/amdgpu/${ROCM_VERSION}/ubuntu ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/amdgpu.list
+        echo "deb [arch=amd64] https://repo.radeon.com/amdgpu/${ROCM_VERSION}/ubuntu ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/amdgpu.list
 
         # Add rocm repository
         wget -qO - http://repo.radeon.com/rocm/rocm.gpg.key | sudo apt-key add -
         rocm_baseurl="http://repo.radeon.com/rocm/apt/${ROCM_VERSION}"
         # TODO: change to "deb [arch=amd64] ..." on AMD runners
-        echo "deb ${rocm_baseurl} ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/rocm.list
+        echo "deb [arch=amd64] ${rocm_baseurl} ${UBUNTU_VERSION_NAME} main" | sudo tee /etc/apt/sources.list.d/rocm.list
         sudo apt-get update --allow-insecure-repositories
 
         DEBIAN_FRONTEND=noninteractive sudo apt-get install -y --allow-unauthenticated \
