--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: ./.github/actions/build_cmake
-        with:
-          opt_level: sve
+        run: |
+            echo "Hello world!"
+      # - uses: ./.github/actions/build_cmake
+        # with:
+        #   opt_level: sve
   # linux-x86_64-cmake:
   #   name: Linux x86_64 (cmake)
   #   runs-on: faiss-aws-r6g.large
