test with full build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,11 @@ jobs:
     runs-on: faiss-aws-r8g.large
     steps:
       - name: Print Hello World
-        run: |
-            echo "Hello world!"
-      # - uses: ./.github/actions/build_cmake
-        # with:
-        #   opt_level: sve
+        # run: |
+        #     echo "Hello world!"
+      - uses: ./.github/actions/build_cmake
+        with:
+          opt_level: sve
   # linux-x86_64-cmake:
   #   name: Linux x86_64 (cmake)
   #   runs-on: faiss-aws-r6g.large
