test full build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,9 @@ jobs:
     name: Linux arm64 (cmake)
     runs-on: faiss-aws-r8g.large
     steps:
-      - name: Print Hello World
+      # - name: Print Hello World
         # run: |
         #     echo "Hello world!"
-    steps:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: ./.github/actions/build_cmake
