hint hip location to cmake

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -319,6 +319,7 @@ foreach(header ${FAISS_GPU_HEADERS})
 endforeach()
 
 if (USE_ROCM)
+list(APPEND CMAKE_MODULE_PATH "/opt/rocm/hip/cmake")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
 target_link_libraries(faiss_gpu PRIVATE hip::host roc::hipblas)
