--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -319,9 +319,9 @@ foreach(header ${FAISS_GPU_HEADERS})
 endforeach()
 
 if (USE_ROCM)
-message("CMAKE_MODULE_PATH:" = ${CMAKE_MODULE_PATH}")
+message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 set(CMAKE_MODULE_PATH "/opt/rocm/hip/cmake" ${CMAKE_MODULE_PATH})
-message("CMAKE_MODULE_PATH:" = ${CMAKE_MODULE_PATH}")
+message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
 target_link_libraries(faiss_gpu PRIVATE hip::host roc::hipblas)
