trying with CMAKE_PREFIX_PATH

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -322,6 +322,9 @@ if (USE_ROCM)
 message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 set(CMAKE_MODULE_PATH "/opt/rocm-6.1.0/lib/cmake/" ${CMAKE_MODULE_PATH})
 message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
+message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
+set(CMAKE_PREFIX_PATH "/opt/rocm" ${CMAKE_PREFIX_PATH})
+message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
 target_link_libraries(faiss_gpu PRIVATE hip::host roc::hipblas)
