try include conda's library paths

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -323,7 +323,8 @@ message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 set(CMAKE_MODULE_PATH "/opt/rocm-6.1.0/lib/cmake/" ${CMAKE_MODULE_PATH})
 message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
-set(CMAKE_PREFIX_PATH "/opt/rocm" ${CMAKE_PREFIX_PATH})
+list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
+list(PREPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
