try an additional path

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -325,6 +325,7 @@ message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
 list(PREPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr")
+list(PREPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr/lib64")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
