try target_link_directories

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -324,8 +324,8 @@ set(CMAKE_MODULE_PATH "/opt/rocm-6.1.0/lib/cmake/" ${CMAKE_MODULE_PATH})
 message("CMAKE_MODULE_PATH: = ${CMAKE_MODULE_PATH}")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
-list(PREPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr")
-list(PREPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr/lib64")
+target_link_directories(faiss PUBLIC "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr")
+target_link_directories(faiss PUBLIC "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr/lib64")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
