try setting LD_LIBRARY_PATH

--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -326,6 +326,8 @@ message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
 target_link_directories(faiss PUBLIC "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr")
 target_link_directories(faiss PUBLIC "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr/lib64")
+set(ENV{LD_LIBRARY_PATH} "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr:$ENV{LD_LIBRARY_PATH}")
+set(ENV{LD_LIBRARY_PATH} "$ENV{CONDA_PREFIX}/x86_64-conda-linux-gnu/sysroot/usr/lib64:$ENV{LD_LIBRARY_PATH}")
 message("CMAKE_PREFIX_PATH: = ${CMAKE_PREFIX_PATH}")
 find_package(HIP REQUIRED)
 find_package(hipBLAS REQUIRED)
