symlink library files and do not build tests

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -101,7 +101,7 @@ runs:
         eval "$(conda shell.bash hook)"
         conda activate
         cmake -B build \
-              -DBUILD_TESTING=ON \
+              -DBUILD_TESTING=OFF \
               -DBUILD_SHARED_LIBS=ON \
               -DFAISS_ENABLE_GPU=${{ inputs.gpu }} \
               -DFAISS_ENABLE_RAFT=${{ inputs.raft }} \
