--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -114,9 +114,9 @@ runs:
               -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
               .
         make -k -C build -j$(nproc)
-#    - name: Setup tmate session
-#      if: always()
-#      uses: mxschmitt/action-tmate@v3
+    - name: Setup tmate session
+      if: always()
+      uses: mxschmitt/action-tmate@v3
     - name: C++ tests
       if: inputs.rocm == 'OFF'
       shell: bash
