Fix CI for AVX512

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
     name: Linux x86_64 AVX512 (cmake)
     continue-on-error: true # non-blocking mode for now
     needs: linux-x86_64-cmake
-    runs-on: faiss-aws-m7i.xlarge
+    runs-on: faiss-aws-m7i.large
     steps:
       - name: Checkout
         continue-on-error: true # non-blocking mode for now
