--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,3 +49,12 @@ jobs:
       - uses: ./.github/actions/build_cmake
         with:
           opt_level: sve
+  linux-x86_64-AVX512-cmake:
+    name: Linux x86_64 AVX512 (cmake)
+    runs-on: faiss-aws-m7i.large
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/build_cmake
+        with:
+          opt_level: avx512
