--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -99,7 +99,7 @@ runs:
               .
         make -k -C build -j$(nproc)
     - name: C++ tests
-      if: runner.arch == 'X64'
+      # if: runner.arch == 'X64'
       shell: bash
       run: |
         export GTEST_OUTPUT="xml:$(realpath .)/test-results/googletest/"
