--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
   linux-x86_64-AVX512-cmake:
     name: Linux x86_64 AVX512 (cmake)
     runs-on: faiss-aws-m7i.large
+    if: false
     steps:
       - name: Checkout
         uses: actions/checkout@v4
