--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,23 +39,23 @@ jobs:
             fi
   linux-arm64-conda:
     name: Linux arm64 (cmake)
-    runs-on: faiss-aws-r8g.large
+    runs-on: test
     steps:
-      # - name: Print Hello World
-      #   run: |
-      #       echo "Hello world7!"
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: ./.github/actions/build_cmake
-        with:
-          opt_level: sve
-  linux-x86_64-AVX512-cmake:
-    name: Linux x86_64 AVX512 (cmake)
-    runs-on: faiss-aws-m7i.large
-    if: false
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: ./.github/actions/build_cmake
-        with:
-          opt_level: avx512
+      - name: Print Hello World
+        run: |
+            echo "Hello world7!"
+      # - name: Checkout
+      #   uses: actions/checkout@v4
+      # - uses: ./.github/actions/build_cmake
+      #   with:
+      #     opt_level: sve
+  # linux-x86_64-AVX512-cmake:
+  #   name: Linux x86_64 AVX512 (cmake)
+  #   runs-on: faiss-aws-m7i.large
+  #   if: false
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - uses: ./.github/actions/build_cmake
+  #       with:
+  #         opt_level: avx512
