--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,15 +20,15 @@ jobs:
       - uses: ./.github/actions/build_cmake
         with:
           opt_level: dnnl
-  linux-x86_64-AVX512-cmake:
-    name: Linux x86_64 AVX512 (cmake)
-    continue-on-error: true # non-blocking mode for now
-    needs: linux-x86_64-cmake
-    runs-on: faiss-aws-m7i.large
-    steps:
-      - name: Checkout
-        continue-on-error: true # non-blocking mode for now
-        uses: actions/checkout@v4
-      - uses: ./.github/actions/build_cmake
-        with:
-          opt_level: avx512
+  # linux-x86_64-AVX512-cmake:
+  #   name: Linux x86_64 AVX512 (cmake)
+  #   continue-on-error: true # non-blocking mode for now
+  #   needs: linux-x86_64-cmake
+  #   runs-on: faiss-aws-m7i.large
+  #   steps:
+  #     - name: Checkout
+  #       continue-on-error: true # non-blocking mode for now
+  #       uses: actions/checkout@v4
+  #     - uses: ./.github/actions/build_cmake
+  #       with:
+  #         opt_level: avx512
