--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -28,9 +28,20 @@ runs:
         conda update -y -q conda
         echo "$CONDA/bin" >> $GITHUB_PATH
 
-        # install base packages
-        conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
-        conda install -y -q python=3.11 cmake make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
+        conda install -y -q python=3.11 cmake make swig numpy scipy pytest
+
+        # install base packages for ARM64
+        if [ "${{ runner.arch }}" = "ARM64" ]; then
+          conda install -y -q -c conda-forge openblas gxx_linux-aarch64 sysroot_linux-aarch64
+        fi
+
+        # install base packages for X86_64
+        if [ "${{ runner.arch }}" = "X64" ]; then
+          # TODO: unpin versions for gxx_linux-64 and sysroot_linux-64 and merge it with ARM64 below
+          conda install -y -q -c conda-forge gxx_linux-64=11.2 sysroot_linux-64=2.28
+          conda install -y -q mkl=2023 mkl-devel=2023 
+        fi
+
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
@@ -53,19 +64,25 @@ runs:
       shell: bash
       run: |
         eval "$(conda shell.bash hook)"
+
+        args=(
+          -DBUILD_TESTING=ON 
+          -DBUILD_SHARED_LIBS=ON 
+          -DFAISS_ENABLE_GPU=${{ inputs.gpu }} 
+          -DFAISS_ENABLE_RAFT=${{ inputs.raft }} 
+          -DFAISS_OPT_LEVEL=${{ inputs.opt_level }} 
+          -DFAISS_ENABLE_C_API=ON 
+          -DPYTHON_EXECUTABLE=$CONDA/bin/python 
+          -DCMAKE_BUILD_TYPE=Release 
+        )
+        if [ "${{ runner.arch }}" = "X64" ]; then
+          args+=(
+            -DBLA_VENDOR=Intel10_64_dyn 
+            -DCMAKE_CUDA_FLAGS=\"-gencode arch=compute_75,code=sm_75\"
+          )
+        fi
         conda activate
-        cmake -B build \
-              -DBUILD_TESTING=ON \
-              -DBUILD_SHARED_LIBS=ON \
-              -DFAISS_ENABLE_GPU=${{ inputs.gpu }} \
-              -DFAISS_ENABLE_RAFT=${{ inputs.raft }} \
-              -DFAISS_OPT_LEVEL=${{ inputs.opt_level }} \
-              -DFAISS_ENABLE_C_API=ON \
-              -DPYTHON_EXECUTABLE=$CONDA/bin/python \
-              -DCMAKE_BUILD_TYPE=Release \
-              -DBLA_VENDOR=Intel10_64_dyn \
-              -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
-              .
+        cmake -B build "${args[@]}" .
         make -k -C build -j$(nproc)
     - name: C++ tests
       shell: bash
@@ -101,5 +118,5 @@ runs:
     - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
-        name: test-results-${{ inputs.opt_level }}-${{ inputs.gpu }}-${{ inputs.raft }}
+        name: test-results-${{ runner.arch }}-${{ inputs.opt_level }}-${{ inputs.gpu }}-${{ inputs.raft }}
         path: test-results
