bash quote expansion

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -82,7 +82,7 @@ runs:
           )
         fi
         conda activate
-        cmake -B build "${args[@]}" .
+        cmake -B build "${args[*]}" .
         make -k -C build -j$(nproc)
     - name: C++ tests
       shell: bash
