--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -78,7 +78,7 @@ runs:
         if [ "${{ runner.arch }}" = "X64" ]; then
           args+=(
             -DBLA_VENDOR=Intel10_64_dyn 
-            -DCMAKE_CUDA_FLAGS=\"-gencode arch=compute_75,code=sm_75\"
+            -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75"
           )
         fi
         conda activate
