--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
   linux-x86_64-AVX512-cmake:
     name: Linux x86_64 AVX512 (cmake)
     continue-on-error: true # non-blocking mode for now
-    needs: linux-x86_64-cmake
+    # needs: linux-x86_64-cmake
     runs-on: faiss-aws-m7i.large
     steps:
       - name: Checkout
