--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -34,7 +34,7 @@ runs:
 
         # install base packages
         conda install -y -q -c conda-forge gxx_linux-64=${{ inputs.rocm == 'ON' && '14.1' || '11.2' }} sysroot_linux-64=2.28
-        conda install -y -q python=3.11 cmake make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
+        conda install -y -q python=3.11 cmake-3.24 make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
@@ -114,9 +114,9 @@ runs:
               -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
               .
         make -k -C build -j$(nproc)
-    - name: Setup tmate session
-      if: always()
-      uses: mxschmitt/action-tmate@v3
+#    - name: Setup tmate session
+#      if: always()
+#      uses: mxschmitt/action-tmate@v3
     - name: C++ tests
       if: inputs.rocm == 'OFF'
       shell: bash
