use conda-forge for cmake

--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -34,7 +34,7 @@ runs:
 
         # install base packages
         conda install -y -q -c conda-forge gxx_linux-64=${{ inputs.rocm == 'ON' && '14.1' || '11.2' }} sysroot_linux-64=2.28
-        conda install -y -q python=3.11 cmake-3.23 make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
+        conda install -y -q python=3.11 conda-forge::cmake-3.23 make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
