--- a/.github/actions/build_cmake/action.yml
+++ b/.github/actions/build_cmake/action.yml
@@ -33,8 +33,8 @@ runs:
         echo "$CONDA/bin" >> $GITHUB_PATH
 
         # install base packages
-        conda install -y -q -c conda-forge gxx_linux-64=${{ inputs.rocm == 'ON' && '14.1' || '11.2' }} sysroot_linux-64=2.28 cmake=3.24
-        conda install -y -q python=3.11 make swig mkl=2023 mkl-devel=2023 numpy scipy pytest
+        conda install -y -q -c conda-forge gxx_linux-64 sysroot_linux-64 cmake=3.24 make
+        conda install -y -q python=3.11 swig mkl=2023 mkl-devel=2023 numpy scipy pytest
 
         # install CUDA packages
         if [ "${{ inputs.gpu }}" = "ON" ] && [ "${{ inputs.raft }}" = "OFF" ]; then
@@ -65,7 +65,7 @@ runs:
         UBUNTU_VERSION_NAME=`cat /etc/os-release | grep UBUNTU_CODENAME | awk -F= '{print $2}'`
 
         # Pin ROCm version for testing
-        export ROCM_VERSION="6.1"
+        export ROCM_VERSION="6.1.1"
 
         # Download, prepare, and install the package signing key
         mkdir --parents --mode=0755 /etc/apt/keyrings
@@ -114,9 +114,9 @@ runs:
               -DCMAKE_CUDA_FLAGS="-gencode arch=compute_75,code=sm_75" \
               .
         make -k -C build -j$(nproc)
-#    - name: Setup tmate session
-#      if: always()
-#      uses: mxschmitt/action-tmate@v3
+    - name: Setup tmate session
+      if: always()
+      uses: mxschmitt/action-tmate@v3
     - name: C++ tests
       if: inputs.rocm == 'OFF'
       shell: bash
