properly find deps, disable ssh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(FAISS_ENABLE_GPU)
   if (FAISS_ENABLE_ROCM)
     set(USE_ROCM TRUE)
     list(APPEND FAISS_LANGUAGES HIP)
+    list(PREPEND CMAKE_MODULE_PATH "/opt/rocm/lib/cmake")
   else()
     list(APPEND FAISS_LANGUAGES CUDA)
   endif()
@@ -60,6 +61,7 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 option(FAISS_OPT_LEVEL "" "generic")
 option(FAISS_ENABLE_GPU "Enable support for GPU indexes." ON)
 option(FAISS_ENABLE_RAFT "Enable RAFT for GPU indexes." OFF)
+option(FAISS_ENABLE_RAFT "Enable ROCm for GPU indexes." OFF)
 option(FAISS_ENABLE_PYTHON "Build Python extension." ON)
 option(FAISS_ENABLE_C_API "Build C API." OFF)
 
@@ -75,7 +77,12 @@ endif()
 
 if(FAISS_ENABLE_RAFT AND NOT TARGET raft::raft)
    find_package(raft COMPONENTS compiled distributed)
- endif()
+endif()
+
+if(USE_ROCM)
+  find_package(HIP REQUIRED)
+  find_package(hipBLAS REQUIRED)
+endif()
 
 add_subdirectory(faiss)
 
