set CMAKE_PREFIX_PATH as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if(FAISS_ENABLE_GPU)
     set(USE_ROCM TRUE)
     list(APPEND FAISS_LANGUAGES HIP)
     list(PREPEND CMAKE_MODULE_PATH "/opt/rocm/lib/cmake")
+    list(PREPEND CMAKE_PREFIX_PATH "/opt/rocm")
   else()
     list(APPEND FAISS_LANGUAGES CUDA)
   endif()
